--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.azkfw</groupId>
 	<artifactId>azuki-business-test</artifactId>
-	<version>1.4.4</version>
+	<version>1.4.5-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>azuki-business-test</name>
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>org.azkfw</groupId>
 			<artifactId>azuki-business</artifactId>
-			<version>1.4.4</version>
+			<version>1.4.5</version>
 		</dependency>
 
 		<dependency>
@@ -46,11 +46,16 @@
 			<artifactId>azuki-datasource</artifactId>
 			<version>1.4.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.azkfw</groupId>
+			<artifactId>azuki-database</artifactId>
+			<version>0.2.0</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.azkfw</groupId>
 			<artifactId>azuki-test</artifactId>
-			<version>1.4.4</version>
+			<version>1.4.5</version>
 		</dependency>
 	</dependencies>
 	
