--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.azkfw</groupId>
 	<artifactId>azuki-business-test</artifactId>
-	<version>1.5.0</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>azuki-business-test</name>
@@ -38,24 +38,18 @@
 		<dependency>
 			<groupId>org.azkfw</groupId>
 			<artifactId>azuki-business</artifactId>
-			<version>1.5.0</version>
+			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.azkfw</groupId>
 			<artifactId>azuki-datasource</artifactId>
-			<version>1.5.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.azkfw</groupId>
-			<artifactId>azuki-database</artifactId>
-			<version>0.2.0</version>
+			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.azkfw</groupId>
 			<artifactId>azuki-test</artifactId>
-			<version>1.4.5</version>
+			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	
